# market-data-lab

./: .dockerignore  .gitignore  Dockerfile.api  README.md  pyproject.toml
config/: universe.yaml
scripts/: dev.sh  refresh_daily.sh  smoke.sh  start_api.sh  start_ui.sh
src/market_data_lab/: __init__.py  cli.py  config.py  firn_integration.py  models.py  moomoo_integration.py  services.py  watchlist_sync.py
src/market_data_lab/api/: __init__.py  app.py
src/market_data_lab/charts/: __init__.py  chart_data.py
src/market_data_lab/fetchers/: __init__.py  yfinance_provider.py
src/market_data_lab/indicators/: __init__.py  technical.py
src/market_data_lab/snapshots/: __init__.py  technical_snapshot.py
src/market_data_lab/storage/: __init__.py  parquet_store.py
tests/: test_api_cli.py  test_data_layer.py  test_indicators_snapshot.py
ui/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
ui/e2e/: market.spec.ts
ui/src/: main.tsx
ui/src/app/: App.tsx  AppShell.tsx  router.tsx
ui/src/features/market/api/: marketApi.ts
ui/src/features/market/components/: DataQualityPanel.tsx  QualityBadge.tsx  StatusCards.tsx  TechnicalChartPanel.tsx  TechnicalMatrix.tsx
ui/src/features/market/model/: formatters.test.ts  formatters.ts  mappers.ts  matrixFilters.test.ts  matrixFilters.ts  types.ts
ui/src/shared/styles/: global.css  tokens.css
ui/src/shared/ui/: DataTable.tsx  MetricCard.tsx  SectionCard.tsx  StatusBadge.tsx
(+7 files in other folders)
