[project]
name = "market-data-lab"
version = "0.1.0"
description = "Local market data cache, technical snapshots, and chart data service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "yfinance>=0.2.0",
]

[project.scripts]
market-data = "market_data_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data_lab"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
